# LightYearsGame

./: .gitignore  README.md  build_run.sh
LightYears/: CMakeLists.txt
LightYears/LightYears/: CMakeLists.txt
LightYears/LightYears/include/framework/: Application.h
LightYears/LightYears/src/: main.cpp
LightYears/LightYears/src/framework/: Application.cpp
LightYears/LightYearsEngine/: CMakeLists.txt
LightYears/LightYearsEngine/include/VFX/: Particle.h
LightYears/LightYearsEngine/include/framework/: Actor.h  Application.h  AssetManager.h  BackdropActor.h  BackgroundLayer.h  Core.h  Delegate.h  MathUtility.h  Object.h  PhysicsSystem.h  TimerManager.h  World.h
LightYears/LightYearsEngine/include/gameplay/: GameStage.h  WaitStage.h
LightYears/LightYearsEngine/include/widgets/: Button.h  HUD.h  ImageWidget.h  TextWidget.h  ValueGuage.h  Widget.h
LightYears/LightYearsEngine/src/: EntryPoint.cpp
LightYears/LightYearsEngine/src/VFX/: Particle.cpp
LightYears/LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  BackdropActor.cpp  BackgroundLayer.cpp  Delegate.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  TimerManager.cpp  World.cpp
LightYears/LightYearsEngine/src/gameplay/: GameStage.cpp  WaitStage.cpp
LightYears/LightYearsEngine/src/widgets/: Button.cpp  HUD.cpp  ImageWidget.cpp  TextWidget.cpp  ValueGuage.cpp  Widget.cpp
LightYears/LightYearsGame/: CMakeLists.txt  config.h.in
LightYears/LightYearsGame/include/: config.h
LightYears/LightYearsGame/include/Enemy/: Boss.h  BossStage.h  ChaosStage.h  EnemySpaceship.h  (+8 more)
(+77 files in other folders)
